agregué mi nombre

--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -11,7 +11,7 @@
     <title>SENA Centro Minero Sogamoso Ficha 1834799</title>
   </head>
   <body>
-
+<h1>INÉS MARÍA</h1>
   <!-- Inicio del Encabezado -->
   <div class="container">
     <nav id="encabezado" class="navbar navbar-expand-lg">
