--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
 <h1>INÉS MARÍA</h1>
+<h1>jorge herrera</h1>
+
   <!-- Inicio del Encabezado -->
   <div class="container">
     <nav id="encabezado" class="navbar navbar-expand-lg">
