Nombre_Mio_de_yo
Agregar Nombre

--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -13,6 +13,8 @@
   <body>
 <h1>INÉS MARÍA</h1>
 <h1>Julian Salgado </h1>
+<h1>Jonathan Martínez </h1>
+
   <!-- Inicio del Encabezado -->
   <div class="container">
     <nav id="encabezado" class="navbar navbar-expand-lg">
