--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
 <h1>INÉS MARÍA</h1>
-<h1>jorge herrera</h1>
+<h1>aqui el gordo reportandose</h1>
 
   <!-- Inicio del Encabezado -->
   <div class="container">
