--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -14,6 +14,7 @@
 <h1>INÉS MARÍA</h1>
 <h1>Julian Salgado </h1>
 <h1>Jonathan Martínez </h1>
+<h1>Yuber Miranda</h1>
 
   <!-- Inicio del Encabezado -->
   <div class="container">
