agrege mi nombre completo

--- a/Sitio Web SENA/index.html
+++ b/Sitio Web SENA/index.html
@@ -11,7 +11,7 @@
     <title>SENA Centro Minero Sogamoso Ficha 1834799</title>
   </head>
   <body>
-<h1>Diana Catalina</h1>
+<h1>Diana Catalina Perez</h1>
 
   <!-- Inicio del Encabezado -->
   <div class="container">
